--- a/School/src/main/webapp/static/school/css/style.css
+++ b/School/src/main/webapp/static/school/css/style.css
@@ -7,8 +7,8 @@ font-family: 'Arvo', serif;
 font-family: 'Angkor', cursive;
 font-family: 'Lato', sans-serif;
  */
-khFont{
-	font-family: 'Battambang', cursive;	
+.khFont{
+	font-family: 'Battambang', cursive !important;	
 }
 *{
 	font-family: 'Battambang', cursive;
@@ -20,7 +20,7 @@ khFont{
 
 /* Important part */
 .modal-dialog{
-    overflow-y: initial !important
+    overflow-y: initial !important;
 }
 .modal-body{
     height: 550px;
